--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header{
 .header-logo{
     margin: 0;
     padding-top: 60px;
-    padding-left: 100px;
+    padding-left: 130px;
     align-items: center;
 }
 .header-list{
@@ -33,22 +33,79 @@ header{
     margin-bottom: 40px;
 }
 .header-play{
+    margin-left: 90px;
     margin-top: 30px;
     display: flex;
 }
 .header-play-list{
     list-style: none;
     margin-bottom: 10px;
-
+    
 }
 .header-play-img{
     background-color: transparent;
 }
 .header-play-list li{
-    width: 200px;
-    margin-bottom: 20px;
-    border: #626262 solid 1px;
+    width: 300px;
+    height: 50px;
+    margin-bottom: 10px;
     border-radius: 40px;
     padding: 15px;
-    margin-right: 600px;
+    margin-right: 400px;
+    background-color: #626262;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 300;
+    letter-spacing: 0px;
+}
+.header-disco{
+    display: flex;
+}
+.header-disco-child{
+    margin-top: 20px;
+    text-align: right;
+    margin-right: 30px;
+    margin-bottom: 0px;
+}
+.disco-child-text{
+    font-size: 25px;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+.disco-child-text2{
+    margin-top: 0;
+}
+
+.header-description{
+    display: flex;
+    margin-top: 40px;
+    margin-left: 130px;
+    width: 80%;
+}
+
+.header-description-text {
+    width: 800px;
+    margin-right: 360px;
+}
+.header-description-text h3 {
+    font-size: 30px;
+}
+.header-foto-main{
+    display: flex;
+}
+.foto-main{
+    margin-left: 30px;
+    margin-top: 15px;
+}
+.foto-main1{
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+.foto-main2{
+    margin-top: 5px;
+}
+.header-description-text p{
+    font-size: 23px;
+    font-weight: 300;
 }
