--- a/style.css
+++ b/style.css
@@ -36,21 +36,23 @@ header{
     margin-left: 90px;
     margin-top: 30px;
     display: flex;
+    flex-wrap: wrap;
 }
 .header-play-list{
     list-style: none;
     margin-bottom: 10px;
     
 }
-.header-play-img{
-    background-color: transparent;
-}
+
 .header-play-list li{
-    width: 300px;
-    height: 50px;
+    /* display: inline-block; */
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-bottom: 10px;
     border-radius: 40px;
-    padding: 15px;
+    
     margin-right: 400px;
     background-color: #626262;
     text-align: center;
@@ -60,7 +62,14 @@ header{
 }
 .header-disco{
     display: flex;
+    
 }
+.header-disco-imagen{
+    position: relative;
+    left: -60px;
+}
+
+
 .header-disco-child{
     margin-top: 20px;
     text-align: right;
@@ -108,4 +117,67 @@ header{
 .header-description-text p{
     font-size: 23px;
     font-weight: 300;
+}
+
+
+
+/* MAIN */
+
+.top-main{
+    margin-left: 75px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.top-main-table{
+    display: flex;
+    width: 100%;
+    margin-left: 60px;
+    justify-content: space-around ;
+    border-bottom: black 1px solid;
+}
+.main-list{
+    display: flex;
+    width: 100%;
+    margin-left: 60px;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    margin-bottom: 15px;
+    border-bottom: gray 1px solid;
+}
+.main-list:first-child{
+    margin: 0;
+}
+.main-list-item{
+    display: flex;
+    align-items: center;
+}
+.main-list-item img{
+    margin: 0px 15px;
+}
+.margin-child{
+    margin: 0 !important;
+}
+.main-main{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    border-bottom: black 1px solid;
+}
+.main-section{
+    margin-left: 100px;
+    width: 1200px;
+
+}
+.main-section2{
+    margin: 0px 0px 0px 300px;
+}
+.albums-img{
+    display: flex;
+    flex-wrap: wrap;
+}
+.album-container{
+    text-align: center;
 }
